logo directory changed

--- a/Task-1/task-1.html
+++ b/Task-1/task-1.html
@@ -10,7 +10,7 @@
   <body>
     <nav class="nav__bar">
       <div class="nav__logo">
-        <img class="logo" src="/images/squerrel.svg" alt="logo" />
+        <img class="logo" src="images/squerrel.svg" alt="logo" />
         <h4>Beta Squerrel</h4>
       </div>
       <ul class="nav__list">
