folder name changed

--- a/Task-4/index.html
+++ b/Task-4/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Figma</title>
   <link rel="shortcut icon" href="images/logo_dark.svg" type="image/x-icon">
-  <link rel="stylesheet" href="css/Task-4.css" />
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
   <nav class="nav__bar">
