--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
           <h2>Beta Squirrel</h2>
         </div>
         <div class="link">
-          <a href="Task-1\task-1.html">Task-1</a>
-          <a href="Task-2\task-2.html">Task-2</a>
-          <a href="Task-4\Task-4.html">Task-4</a>
+          <a href="Task-1\index.html">Task-1</a>
+          <a href="Task-2\index.html">Task-2</a>
+          <a href="Task-4\index.html">Task-4</a>
         </div>
       </div>
     </div>
