--- a/Task-1/index.html
+++ b/Task-1/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="Task-1 CSS/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <header>
       <nav class="nav__bar">
-        <img class="logo" src="logo/adidas-originals-logo.svg" alt="logo" />
+        <img class="logo" src="images/adidas-originals-logo.svg" alt="logo" />
         <ul class="nav__list">
           <li class="nav__items"><a href="#">Home</a></li>
           <li class="nav__items"><a href="#">About Us</a></li>
