--- a/task-4/index.html
+++ b/task-4/index.html
@@ -1,83 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Figma</title>
-  <link rel="shortcut icon" href="images/logo_dark.svg" type="image/x-icon">
-  <link rel="stylesheet" href="css/style.css" />
-</head>
-<body>
-  <nav class="nav__bar">
-    <div class="nav__logo">
-      <img class="logo" src="images/figma-logo.png" alt="logo" />
-      <div class="logo__heading">
-        <h3>Figma</h3>
-      </div>
-    </div>
-    <img class="profile__image" src="images/6d5fc60bae3dc6139eefa31af206596f.jpg" alt="profile_image" />
-  </nav>
-  <div class="main__container">
-    <div class="container__one">
-      <ul class="list__item">
-        <li class="first"><a href="#">Dashboard</a></li>
-        <li><a href="#">Users</a></li>
-        <li><a href="#">Purchases</a></li>
-        <li><a href="#">Sales</a></li>
-        <li><a href="#">Tax</a></li>
-        <li><a href="#">Employees</a></li>
-        <li><a href="#">Accounts</a></li>
-        <li><a href="#">Configuration</a></li>
-        <li><a href="#">Auditing</a></li>
-        <li><a href="#">Reports</a></li>
-      </ul>
-    </div>
-    <div class="container__two">
-      <div class="dashboard"><a href="#">Dashboard</a></div>
-      <div class="sub__container__one">
-        <div class="box box-one">
-          <h4>Total Sales</h4>
-          <p>AED 20,0000</p>
-        </div>
-        <div class="box box-two">
-          <h4>Total Purchase</h4>
-          <p>AED 10,0000</p>
-        </div>
-        <div class="box box-three">
-          <h4>Total Expences</h4>
-          <p>AED 50,000</p>
-        </div>
-        <div class="box box-four">
-          <h4>Revenue</h4>
-          <p>AED 50,000</p>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Figma</title>
+    <link rel="shortcut icon" href="images/logo_dark.svg" type="image/x-icon" />
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <nav class="nav__bar">
+      <div class="nav__logo">
+        <img class="logo" src="images/figma-logo.png" alt="logo" />
+        <div class="logo__heading">
+          <h3>Figma</h3>
         </div>
       </div>
-      <div class="sub__container__two">
-        <div class="circle-one">
-          <div class="sub__circle__one">
-            <p>40/400</p>
+      <img
+        class="profile__image"
+        src="images/6d5fc60bae3dc6139eefa31af206596f.jpg"
+        alt="profile_image"
+      />
+    </nav>
+    <div class="main__container">
+      <div class="container__one">
+        <ul class="list__item">
+          <li class="first"><a href="#">Dashboard</a></li>
+          <li><a href="#">Users</a></li>
+          <li><a href="#">Purchases</a></li>
+          <li><a href="#">Sales</a></li>
+          <li><a href="#">Tax</a></li>
+          <li><a href="#">Employees</a></li>
+          <li><a href="#">Accounts</a></li>
+          <li><a href="#">Configuration</a></li>
+          <li><a href="#">Auditing</a></li>
+          <li><a href="#">Reports</a></li>
+        </ul>
+      </div>
+      <div class="container__two">
+        <div class="dashboard"><a href="#">Dashboard</a></div>
+        <div class="sub__container__one">
+          <div class="box box-one">
+            <h4>Total Sales</h4>
+            <p>AED 20,0000</p>
+          </div>
+          <div class="box box-two">
+            <h4>Total Purchase</h4>
+            <p>AED 10,0000</p>
+          </div>
+          <div class="box box-three">
+            <h4>Total Expences</h4>
+            <p>AED 50,000</p>
+          </div>
+          <div class="box box-four">
+            <h4>Revenue</h4>
+            <p>AED 50,000</p>
           </div>
         </div>
-        <div class="circle-two">
-          <div class="sub__circle__two">
-            <p>10/200</p>
+        <div class="sub__container__two">
+          <div class="circle-one">
+            <div class="sub__circle__one">
+              <p>40/400</p>
+            </div>
           </div>
-        </div>
-        <div class="circle-three">
-          <div class="sub__circle__three">
-            <p>Danger</p>
+          <div class="circle-two">
+            <div class="sub__circle__two">
+              <p>10/200</p>
+            </div>
           </div>
-        </div>
-        <div class="graph">
-          <div class="graph graph__one"></div>
-          <div class="graph graph__two"></div>
-          <div class="graph graph__three"></div>
-          <div class="graph graph__four"></div>
-          <div class="graph graph__five"></div>
-          <div class="graph graph__six"></div>
+          <div class="circle-three">
+            <div class="sub__circle__three">
+              <p>Danger</p>
+            </div>
+          </div>
+          <div class="graph">
+            <div class="graph graph__one"></div>
+            <div class="graph graph__two"></div>
+            <div class="graph graph__three"></div>
+            <div class="graph graph__four"></div>
+            <div class="graph graph__five"></div>
+            <div class="graph graph__six"></div>
+          </div>
         </div>
       </div>
     </div>
-</body>
+  </body>
 </html>
