--- a/task-1/index.html
+++ b/task-1/index.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Beta squirrel</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <header>
       <nav class="nav__bar">
-        <img class="logo" src="images/adidas-originals-logo.svg" alt="logo" />
+        <div class="logo">
+          <img src="images/adidas-originals-logo.svg" alt="logo" />
+          <h2>Beta Squirrel</h2>
+        </div>
         <ul class="nav__list">
           <li class="nav__items"><a href="#">Home</a></li>
           <li class="nav__items"><a href="#">About Us</a></li>
@@ -20,7 +23,7 @@
     </header>
     <main>
       <div class="container__one">
-        <h2>Lorem ipsum dolor sit amet.</h2>
+        <h1>Lorem ipsum dolor sit amet.</h1>
         <p>
           Lorem ipsum dolor sit amet consectetur, adipisicing elit. Asperiores
           provident, nemo illo fugiat fugit fuga sapiente, labore eaque, cumque
@@ -29,6 +32,9 @@
           excepturi exercitationem, quod dolorem libero natus enim? Itaque
           consequatur libero officia debitis ex at ducimus voluptates cum animi
           hic tempora exercitationem minus ut incidunt, dolores cupiditate
+        </p>
+        <br />
+        <p>
           ratione? Magni debitis culpa quia adipisci fuga cupiditate vitae
           labore, animi mollitia maxime tempora minima est aperiam quisquam
           earum consectetur? Doloribus quasi laboriosam aliquam aliquid, cum
@@ -36,15 +42,6 @@
           reprehenderit ad? Lorem ipsum dolor, sit amet consectetur adipisicing
           elit. Eaque aliquid incidunt consequuntur, ipsa quidem repudiandae
           totam expedita voluptas quod labore assumenda laborum nostrum? Maxime
-          consequuntur repellendus beatae deleniti ex adipisci provident illo
-          illum voluptate sapiente nemo neque perspiciatis harum dolorem magni
-          aspernatur officiis hic, reiciendis quibusdam debitis. Odit numquam ex
-          impedit? Nulla vero commodi repellat voluptatem neque fugit ut dolores
-          enim! Omnis beatae, alias similique pariatur perferendis ipsa esse
-          qui? Totam eligendi alias ex vitae, nesciunt nemo voluptate quasi
-          corrupti? Repellendus rem hic, fugiat inventore voluptas illum sint,
-          expedita, adipisci excepturi atque dignissimos maxime! Error in
-          tempora nam minima mollitia.
         </p>
       </div>
       <div class="container__two">
@@ -54,8 +51,7 @@
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque
             repudiandae qui facilis quaerat neque sint ab, a nihil unde, sunt
             odit ipsum. Ea nemo provident natus praesentium doloremque
-            laudantium neque minus a impedit error saepe, quis dicta ex quasi
-            quam maxime sed ratione. Iure amet architecto ex harum, dolore enim!
+            laudantium neque minus a impedit error saepe.
           </p>
         </div>
         <div class="box box__margin">
@@ -63,9 +59,7 @@
           <p>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque
             repudiandae qui facilis quaerat neque sint ab, a nihil unde, sunt
-            odit ipsum. Ea nemo provident natus praesentium doloremque
-            laudantium neque minus a impedit error saepe, quis dicta ex quasi
-            quam maxime sed ratione. Iure amet architecto ex harum, dolore enim!
+            odit ipsum.
           </p>
         </div>
         <div class="box">
@@ -74,8 +68,7 @@
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque
             repudiandae qui facilis quaerat neque sint ab, a nihil unde, sunt
             odit ipsum. Ea nemo provident natus praesentium doloremque
-            laudantium neque minus a impedit error saepe, quis dicta ex quasi
-            quam maxime sed ratione. Iure amet architecto ex harum, dolore enim!
+            laudantium neque minus a impedit error saepe.
           </p>
         </div>
       </div>
