changed to requirement

--- a/task-4/index.html
+++ b/task-4/index.html
@@ -74,12 +74,12 @@
             </div>
           </div>
           <div class="graph">
-            <div class="graph graph__one"></div>
-            <div class="graph graph__two"></div>
-            <div class="graph graph__three"></div>
-            <div class="graph graph__four"></div>
-            <div class="graph graph__five"></div>
-            <div class="graph graph__six"></div>
+            <div class="graph__one"></div>
+            <div class="graph__two"></div>
+            <div class="graph__three"></div>
+            <div class="graph__four"></div>
+            <div class="graph__five"></div>
+            <div class="graph__six"></div>
           </div>
         </div>
       </div>
