responsive desugn added

--- a/task-2/index.html
+++ b/task-2/index.html
@@ -20,7 +20,7 @@
       </ul>
     </nav>
     <div class="container">
-      <div class="box box__1">
+      <div class="box">
         <h3>Lorem, ipsum dolor.</h3>
         <p>
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit
