addmission page updated mobile view

--- a/task-5/index.html
+++ b/task-5/index.html
@@ -28,7 +28,7 @@
       <div class="main-container">
         <div class="container__one">
           <a class="heading" href="#">STUDENTS</a>
-          <a class="add__student" href="#">Add Students</a>
+          <a class="add__student" href="admission.html">Add Students</a>
         </div>
         <div class="student__table">
           <table>
