addmission page updated mobile view

--- a/task-5/admission.html
+++ b/task-5/admission.html
@@ -68,24 +68,40 @@
           </div>
           <div class="form-group">
             <label for="">Do You Need Hostel Facility :</label>
-            <input type="radio" name="hostel" id="yes" />
-            <label class="radio__label" for="yes">Yes</label>
-            <input type="radio" name="hostel" id="no" />
-            <label class="radio__label" for="no">No</label>
+            <div class="radio">
+              <div>
+                <input type="radio" name="hostel" id="yes" />
+                <label class="radio__label" for="yes">Yes</label>
+              </div>
+              <div>
+                <input type="radio" name="hostel" id="no" />
+                <label class="radio__label" for="no">No</label>
+              </div>
+            </div>
           </div>
           <div class="form-group">
             <div><label for="">Choose Additional Subjects :</label></div>
             <div class="check">
-              <input type="checkbox" name="" id="" />
-              <label for="">Cyber Security</label>
-              <input type="checkbox" name="" id="" />
-              <label for="">Artificial Intelligence</label>
-              <input type="checkbox" name="" id="" />
-              <label for="">Block Chain</label>
-              <input type="checkbox" name="" id="" />
-              <label for="">IoT</label>
-              <input type="checkbox" name="" id="" />
-              <label for="">Robotics</label>
+              <div>
+                <input type="checkbox" />
+                <label for="">Cyber Security</label>
+              </div>
+              <div>
+                <input type="checkbox" />
+                <label for="">Artificial Intelligence</label>
+              </div>
+              <div>
+                <input type="checkbox" />
+                <label for="">Block Chain</label>
+              </div>
+              <div>
+                <input type="checkbox" />
+                <label for="">IoT</label>
+              </div>
+              <div>
+                <input type="checkbox" />
+                <label for="">Robotics</label>
+              </div>
             </div>
           </div>
           <div class="form-group">
