responsive large screen added

--- a/task-5/admission.html
+++ b/task-5/admission.html
@@ -32,81 +32,93 @@
           <a href="#">STUDENT REGISTRATION</a>
         </div>
         <form class="form-area">
-          <div class="form-group">
-            <label for="first_name">First Name <span>*</span> :</label>
-            <input
-              id="first_name"
-              type="text"
-              placeholder="Enter your first name"
-              autofocus
-            />
+          <div class="section_one">
+            <div class="form-group">
+              <label for="first_name">First Name <span>*</span> :</label>
+              <input
+                id="first_name"
+                type="text"
+                placeholder="Enter your first name"
+                autofocus
+              />
+            </div>
+            <div class="form-group">
+              <label for="text">Last Name <span>*</span> :</label>
+              <input type="text" placeholder="Enter your last name" />
+            </div>
           </div>
-          <div class="form-group">
-            <label for="text">Last Name <span>*</span> :</label>
-            <input type="text" placeholder="Enter your last name" />
+          <div class="section_two">
+            <div class="form-group">
+              <label for="">Mobile <span>*</span> :</label>
+              <input type="tel" placeholder="Enter your mobile number" />
+            </div>
+            <div class="form-group">
+              <label for="">Email <span>*</span> :</label>
+              <input type="email" placeholder="Enter your email" />
+            </div>
           </div>
-          <div class="form-group">
-            <label for="">Mobile <span>*</span> :</label>
-            <input type="tel" placeholder="Enter your mobile number" />
-          </div>
-          <div class="form-group">
-            <label for="">Email <span>*</span> :</label>
-            <input type="email" placeholder="Enter your email" />
-          </div>
-          <div class="form-group">
-            <label for="">Branch <span>*</span> :</label>
-            <input
-              type="text"
-              list="branches"
-              placeholder="Select branches you like"
-            />
-            <datalist id="branches">
-              <option>Computer science engineering</option>
-              <option>Mechanical engineering</option>
-              <option>Civil engineering</option>
-            </datalist>
-          </div>
-          <div class="form-group">
-            <label for="">Do You Need Hostel Facility :</label>
-            <div class="radio">
-              <div>
-                <input type="radio" name="hostel" id="yes" />
-                <label class="radio__label" for="yes">Yes</label>
-              </div>
-              <div>
-                <input type="radio" name="hostel" id="no" />
-                <label class="radio__label" for="no">No</label>
+          <div class="section_three">
+            <div class="form-group">
+              <label for="">Branch <span>*</span> :</label>
+              <input
+                type="text"
+                list="branches"
+                placeholder="Select branches you like"
+              />
+              <datalist id="branches">
+                <option>Computer science engineering</option>
+                <option>Mechanical engineering</option>
+                <option>Civil engineering</option>
+              </datalist>
+            </div>
+            <div class="form-group">
+              <label for="">Do You Need Hostel Facility :</label>
+              <div class="radio">
+                <div>
+                  <input type="radio" name="hostel" id="yes" />
+                  <label class="radio__label" for="yes">Yes</label>
+                </div>
+                <div>
+                  <input type="radio" name="hostel" id="no" />
+                  <label class="radio__label" for="no">No</label>
+                </div>
               </div>
             </div>
           </div>
-          <div class="form-group">
-            <div><label for="">Choose Additional Subjects :</label></div>
-            <div class="check">
-              <div>
-                <input type="checkbox" />
-                <label for="">Cyber Security</label>
-              </div>
-              <div>
-                <input type="checkbox" />
-                <label for="">Artificial Intelligence</label>
-              </div>
-              <div>
-                <input type="checkbox" />
-                <label for="">Block Chain</label>
-              </div>
-              <div>
-                <input type="checkbox" />
-                <label for="">IoT</label>
-              </div>
-              <div>
-                <input type="checkbox" />
-                <label for="">Robotics</label>
+          <div class="section_four">
+            <div class="form-group">
+              <div><label for="">Choose Additional Subjects :</label></div>
+              <div class="check">
+                <div>
+                  <input id="cybersecurity" type="checkbox" />
+                  <label for="cybersecurity">Cyber Security</label>
+                </div>
+                <div>
+                  <input id="ai" type="checkbox" />
+                  <label for="ai">Artificial Intelligence</label>
+                </div>
+                <div>
+                  <input id="bc" type="checkbox" />
+                  <label for="bc">Block Chain</label>
+                </div>
+                <div>
+                  <input id="iot" type="checkbox" />
+                  <label for="iot">IoT</label>
+                </div>
+                <div>
+                  <input id="robotics" type="checkbox" />
+                  <label for="robotics">Robotics</label>
+                </div>
               </div>
             </div>
           </div>
           <div class="form-group">
             <label for="">Permanenet Address <span>*</span></label>
-            <textarea cols="30" rows="5">Enter your full address</textarea>
+            <textarea
+              cols="30"
+              rows="7"
+              placeholder="Enter your full address"
+            ></textarea>
           </div>
           <div class="button">
             <button type="reset">Clear</button>
