--- a/task-5/index.html
+++ b/task-5/index.html
@@ -11,7 +11,9 @@
     <header>
       <nav>
         <div class="logo-container">
-          <a href="/index.html"><img src="images/logo.svg" alt="logo" /></a>
+          <a href="/index.html"
+            ><img src="images/logo.svg" alt="logo image"
+          /></a>
           <h2>One School</h2>
         </div>
         <img class="profile__image" src="images/man.png" alt="progilepic" />
