--- a/task-5/admission.html
+++ b/task-5/admission.html
@@ -11,9 +11,7 @@
     <header>
       <nav>
         <div class="logo-container">
-          <a href="/task-5/index.html"
-            ><img src="images/logo.svg" alt="logo"
-          /></a>
+          <a href="index.html"><img src="images/logo.svg" alt="logo" /></a>
           <h2>One School</h2>
         </div>
         <img class="profile__image" src="images/man.png" alt="progilepic" />
@@ -113,7 +111,7 @@
             </div>
           </div>
           <div class="form-group">
-            <label for="">Permanenet Address <span>*</span></label>
+            <label for="">Permanenet Address <span>*</span> :</label>
             <textarea
               cols="30"
               rows="7"
