--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
         <a href="task-2/index.html">Task 2</a>
         <a href="task-4/index.html">Task 4</a>
         <a href="task-5/index.html">Task 5</a>
+        <a
+          href="https://www.figma.com/file/OtY0JAHQlw8LcsrnEAVZUb/Car-wash-Website-design?node-id=0%3A1&t=SIZA6ttRp8iKb4hR-1"
+          >Task 7</a
+        >
       </div>
     </div>
   </body>
