font awesome and favicon image added

--- a/index.html
+++ b/index.html
@@ -5,12 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
+    <link
+      rel="shortcut icon"
+      href="task-2/images/squerrel.svg"
+      type="image/x-icon"
+    />
     <title>Beta-squirrrel Tasks</title>
   </head>
   <body>
     <div class="box">
-      <div class="heading">
-        <h2>Beta Squirrel</h2>
+      <div>
+        <h1>Beta-squirrrel</h1>
       </div>
       <div class="link">
         <a href="task-1/index.html">Task 1</a>
