--- a/task-5/admission.html
+++ b/task-5/admission.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Admission</title>
     <link rel="stylesheet" href="css/admission.css" />
+    <link rel="shortcut icon" href="images/logo.svg" type="image/x-icon" />
   </head>
   <body>
     <header>
@@ -20,9 +21,18 @@
     <main>
       <div class="sidebar">
         <ul class="list">
-          <li class="list__item"><a href="#">STUDENTS</a></li>
-          <li class="list__item"><a href="#">STAFF</a></li>
-          <li class="list__item"><a href="#">EXAMS</a></li>
+          <li class="list__item flex">
+            <img src="images/student.png" alt="student-icon" />
+            <a href="#">STUDENTS</a>
+          </li>
+          <li class="list__item flex">
+            <img src="images/staff.png" alt="staff-icon" />
+            <a href="#">STAFF</a>
+          </li>
+          <li class="list__item flex">
+            <img src="images/exam.png" alt="exam-icon" />
+            <a href="#">EXAMS</a>
+          </li>
         </ul>
       </div>
       <div class="main-container">
