--- a/task-1/index.html
+++ b/task-1/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Beta squirrel</title>
     <link rel="stylesheet" href="css/style.css" />
+    <link
+      rel="shortcut icon"
+      href="images/adidas-originals-logo.svg"
+      type="image/x-icon"
+    />
   </head>
   <body>
     <header>
