--- a/task-2/index.html
+++ b/task-2/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Beta Squerrel</title>
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="shortcut icon" href="images/squerrel.svg" type="image/x-icon" />
   </head>
   <body>
     <nav class="nav__bar">
