--- a/task-5/index.html
+++ b/task-5/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login</title>
+    <title>Login page</title>
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="shortcut icon" href="images/logo.svg" type="image/x-icon" />
   </head>
   <body>
     <header>
@@ -22,9 +23,18 @@
     <main>
       <div class="sidebar">
         <ul class="list">
-          <li class="list__item"><a href="#">STUDENTS</a></li>
-          <li class="list__item"><a href="#">STAFF</a></li>
-          <li class="list__item"><a href="#">EXAMS</a></li>
+          <li class="list__item flex">
+            <img src="images/student.png" alt="student-icon" />
+            <a href="#">STUDENTS</a>
+          </li>
+          <li class="list__item flex">
+            <img src="images/staff.png" alt="staff-icon" />
+            <a href="#">STAFF</a>
+          </li>
+          <li class="list__item flex">
+            <img src="images/exam.png" alt="exam-icon" />
+            <a href="#">EXAMS</a>
+          </li>
         </ul>
       </div>
       <div class="main-container">
