--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
           href="https://www.figma.com/file/OtY0JAHQlw8LcsrnEAVZUb/Car-wash-Website-design?node-id=0%3A1&t=SIZA6ttRp8iKb4hR-1"
           >Task 7</a
         >
+        <a href="task-8/index.html">Task 8</a>
       </div>
     </div>
   </body>
