--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
           >Task 7</a
         >
         <a href="task-8/index.html">Task 8</a>
+        <a href="task-9/index.html">Task 9</a>
       </div>
     </div>
   </body>
